--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,11 +22,11 @@ repository = "https://github.com/edgarrmondragon/tap-socketdev"
 documentation = "https://github.com/edgarrmondragon/tap-socketdev#readme"
 
 [tool.poetry.dependencies]
-python = "<3.12,>=3.8"
-singer-sdk = ">=0.32,<0.34"
+python = ">=3.8,<4"
+singer-sdk = "~=0.33.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.4.1"
+pytest = "~=7.4"
 
 [tool.poetry.scripts]
 # CLI declaration
