--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
-build-backend = "poetry.core.masonry.api"
+build-backend = "poetry_dynamic_versioning.backend"
 requires = [
-  "poetry-core==1.7",
+  "poetry-core<2,>=1.8",
   "poetry-dynamic-versioning",
 ]
 
@@ -22,11 +22,12 @@ repository = "https://github.com/edgarrmondragon/tap-socketdev"
 documentation = "https://github.com/edgarrmondragon/tap-socketdev#readme"
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4"
+python = ">=3.8"
 singer-sdk = "~=0.34.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "~=7.4"
+singer-sdk = {version = "*", extras = ["testing"]}
 
 [tool.poetry.scripts]
 # CLI declaration
