--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,53 +1,37 @@
-name: Publish with Dynamic Versioning
+name: Build
 
 on:
-  release:
-    types: [published]
+  push:
 
 permissions:
   contents: write
   id-token: write
 
 jobs:
-  publish:
-    name: Publish to PyPI
+  build:
     runs-on: ubuntu-latest
-    environment: publishing
-    env:
-      PIP_CONSTRAINT: .github/workflows/constraints.txt
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - uses: hynek/build-and-inspect-python-package@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+  publish:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: publishing
+      url: https://pypi.org/project/tap-socketdev
+    if: startsWith(github.ref, 'refs/tags/')
+    steps:
+      - uses: actions/download-artifact@v4
         with:
-          python-version: "3.11"
-
-      - name: Upgrade pip
-        run: |
-          pip install pip
-          pip --version
-
-      - name: Install Poetry
-        run: |
-          pipx install poetry
-          pipx inject poetry poetry-dynamic-versioning[plugin]
-          poetry --version
-          poetry self show plugins
-
-      - name: Build
-        run: poetry build
-
-      - name: Upload wheel to release
-        uses: svenstaro/upload-release-action@v2
+          name: Packages
+          path: dist
+      - uses: svenstaro/upload-release-action@v2
         with:
-          file: dist/*.whl
+          file: dist/*
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: true
-
-      - name: Publish
-        uses: pypa/gh-action-pypi-publish@v1.8.11
+      - uses: pypa/gh-action-pypi-publish@release/v1
