--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,14 @@ description = "`tap-socketdev` is a Singer tap for Socket, built with the Meltan
 authors = [
   "Edgar Ramírez-Mondragón <edgarrm358@gmail.com>",
 ]
+classifiers = [
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.13",
+]
 keywords = [
   "ELT",
   "singer.io",
@@ -25,6 +33,7 @@ documentation = "https://github.com/edgarrmondragon/tap-socketdev#readme"
 
 [tool.poetry.dependencies]
 python = ">=3.8"
+cffi = { version = ">=1.17.0rc1", python = ">=3.13" }
 singer-sdk = "~=0.38.0"
 requests = "~=2.32.0"
 
@@ -92,6 +101,9 @@ lint.isort.required-imports = [
   "from __future__ import annotations",
 ]
 lint.pydocstyle.convention = "google"
+
+[tool.pyproject-fmt]
+max_supported_python = "3.13"
 
 [tool.pytest.ini_options]
 addopts = "-vvv"
