Install poetry-plugin-export

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [build-system]
 build-backend = "poetry_dynamic_versioning.backend"
 requires = [
-  "poetry-core>=1.8,<2",
-  "poetry-dynamic-versioning",
+  "poetry-core==2.0.1",
+  "poetry-dynamic-versioning==1.7.1",
 ]
 
 [tool.poetry]
@@ -74,7 +74,6 @@ lint.select = [
   "ALL",
 ]
 lint.ignore = [
-  "ANN101", # missing-type-self
   "COM812", # missing-trailing-comma
   "DJ",     # flake8-django
   "FIX002", # line-contains-todo
