--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,6 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "local>edgarrmondragon/.github:renovate-config"
-  ]
+    // https://github.com/edgarrmondragon/.github/blob/main/renovate/singer.json5
+    "edgarrmondragon/.github//renovate/singer.json5",
+  ],
 }
