--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,8 +32,9 @@ repos:
     hooks:
       - id: mypy
         pass_filenames: true
+        language: python
         additional_dependencies:
-          - types-requests
+          - types-requests==2.32.0.20241016
 
   - repo: https://github.com/pre-commit/pre-commit
     rev: v4.1.0
