--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,7 @@ permissions:
 
 jobs:
   build:
+    name: Build and Inspect
     runs-on: ubuntu-24.04
     outputs:
       package_version: ${{ steps.baipp.outputs.package_version }}
@@ -20,6 +21,7 @@ jobs:
         id: baipp
 
   publish:
+    name: Publish to PyPI
     runs-on: ubuntu-24.04
     needs: build
     environment:
