--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,17 +9,19 @@ permissions:
 
 jobs:
   build:
+    name: Build and Inspect
     runs-on: ubuntu-24.04
     outputs:
       package_version: ${{ steps.baipp.outputs.package_version }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
         with:
           fetch-depth: 0
-      - uses: hynek/build-and-inspect-python-package@v2
+      - uses: hynek/build-and-inspect-python-package@b5076c307dc91924a82ad150cdd1533b444d3310 # v2.12.0
         id: baipp
 
   publish:
+    name: Publish to PyPI
     runs-on: ubuntu-24.04
     needs: build
     environment:
@@ -27,14 +29,14 @@ jobs:
       url: https://pypi.org/project/tap-socketdev/${{ needs.build.outputs.package_version }}
     if: startsWith(github.ref, 'refs/tags/')
     steps:
-      - uses: actions/download-artifact@v4
+      - uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
           name: Packages
           path: dist
-      - uses: svenstaro/upload-release-action@v2
+      - uses: svenstaro/upload-release-action@04733e069f2d7f7f0b4aebc4fbdbce8613b03ccd # 2.9.0
         with:
           file: dist/*
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: true
-      - uses: pypa/gh-action-pypi-publish@release/v1
+      - uses: pypa/gh-action-pypi-publish@76f52bc884231f62b9a034ebfe128415bbaabdfc # v1.12.4
