--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,3 +40,12 @@ repos:
     rev: v4.1.0
     hooks:
       - id: validate_manifest
+
+  - repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: 0.31.2
+    hooks:
+    - id: check-github-workflows
+    - id: check-renovate
+      language: python
+      additional_dependencies:
+      - pyjson5==1.6.8
