--- a/meltano.yml
+++ b/meltano.yml
@@ -10,7 +10,7 @@ plugins:
     label: Socket
     namespace: socketdev
     description: Supply chain security
-    repository: https://github.com/edgarrmondragon/tap-socketdev
+    repo: https://github.com/edgarrmondragon/tap-socketdev
     docs: https://github.com/edgarrmondragon/tap-socketdev#readme
     pip_url: -e .
     capabilities:
