packaging: Switch to uv!

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,8 @@ on:
     - tap_socketdev/**
     - tests/**
     - noxfile.py
-    - poetry.lock
     - pyproject.toml
+    - uv.lock
     - .github/workflows/test.yml
   pull_request:
     types: [opened, synchronize, reopened]
@@ -16,8 +16,8 @@ on:
     - tap_socketdev/**
     - tests/**
     - noxfile.py
-    - poetry.lock
     - pyproject.toml
+    - uv.lock
     - .github/workflows/test.yml
   workflow_dispatch:
   schedule:
@@ -31,15 +31,9 @@ concurrency:
 env:
   FORCE_COLOR: "1"
   # renovate: datasource=pypi depName=nox
-  NOX_VERSION: 2025.2.9
-  # renovate: datasource=pypi depName=nox-poetry
-  NOX_POETRY_VERSION: 1.2.0
-  # renovate: datasource=pypi depName=pip
-  PIP_VERSION: 25.1
-  # renovate: datasource=pypi depName=poetry
-  POETRY_VERSION: 2.1.2
-  # renovate: datasource=pypi depName=poetry-plugin-export
-  POETRY_PLUGIN_EXPORT_VERSION: 1.9.0
+  NOX_VERSION: 2025.5.1
+  # renovate: datasource=pypi depName=uv
+  UV_VERSION: 0.7.11
 
 jobs:
   test:
@@ -61,40 +55,19 @@ jobs:
         - "3.14"
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+    - uses: astral-sh/setup-uv@f0ec1fc3b38f5e7cd731bb6ce540c5af426746bb # v6.1.0
       with:
-        python-version: ${{ matrix.python-version }}
-        allow-prereleases: true
-        cache: pip
-        cache-dependency-path: poetry.lock
-
-    - name: Upgrade pip
-      run: |
-        pip install pip==${{ env.PIP_VERSION }}
-        pip --version
-
-    - name: Install Poetry
-      run: |
-        pipx install poetry==${{ env.POETRY_VERSION }}
-        pipx inject poetry poetry-plugin-export==${{ env.POETRY_PLUGIN_EXPORT_VERSION }}
-        poetry --version
-        poetry self show plugins
-
-    - name: Install Nox
-      run: |
-        pipx install nox==${{ env.NOX_VERSION }}
-        pipx inject nox nox-poetry==${{ env.NOX_POETRY_VERSION }}
-        nox --version
-
+        version: ${{ env.UV_VERSION }}
     - name: Run tests
       env:
         TAP_SOCKETDEV_API_KEY: ${{ secrets.TAP_SOCKETDEV_API_KEY }}
         TAP_SOCKETDEV_START_DATE: ${{ secrets.TAP_SOCKETDEV_START_DATE }}
-      run: |
+      run: >
+        uvx
+        --managed-python
+        --python ${{ matrix.python-version }}
+        --with nox==${{ env.NOX_VERSION }}
         nox --verbose
 
   typing:
@@ -102,34 +75,13 @@ jobs:
     env:
       NOXSESSION: mypy
     steps:
-    - name: Checkout code
-      uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-
-    - name: Set up Python
-      uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5.6.0
-      id: setup-python
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+    - uses: astral-sh/setup-uv@f0ec1fc3b38f5e7cd731bb6ce540c5af426746bb # v6.1.0
       with:
-        cache: pip
-        cache-dependency-path: poetry.lock
-
-    - name: Upgrade pip
-      run: |
-        pip install pip==${{ env.PIP_VERSION }}
-        pip --version
-
-    - name: Install Poetry
-      run: |
-        pipx install --python ${{ steps.setup-python.outputs.python-path }} poetry==${{ env.POETRY_VERSION }}
-        pipx inject poetry poetry-plugin-export==${{ env.POETRY_PLUGIN_EXPORT_VERSION }}
-        poetry --version
-        poetry self show plugins
-
-    - name: Install Nox
-      run: |
-        pipx install --python ${{ steps.setup-python.outputs.python-path }} nox==${{ env.NOX_VERSION }}
-        pipx inject nox nox-poetry==${{ env.NOX_POETRY_VERSION }}
-        nox --version
-
+        version: ${{ env.UV_VERSION }}
     - name: Run typing checks
-      run: |
+      run: >
+        uvx
+        --no-python-downloads
+        --with nox==${{ env.NOX_VERSION }}
         nox --verbose
