--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,8 @@ ci:
   autofix_prs: true
   autoupdate_schedule: monthly
   autoupdate_commit_msg: "ci(deps-dev): pre-commit autoupdate"
+  skip:
+  - uv-lock
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -50,3 +52,9 @@ repos:
       language: python
       additional_dependencies:
       - pyjson5==1.6.8
+
+  - repo: https://github.com/astral-sh/uv-pre-commit
+    rev: "0.7.11"
+    hooks:
+    - id: uv-lock
+    - id: uv-sync
