--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -12,6 +12,7 @@ jobs:
     name: Build and Inspect
     runs-on: ubuntu-24.04
     outputs:
+      package_name: ${{ steps.baipp.outputs.package_name }}
       package_version: ${{ steps.baipp.outputs.package_version }}
     steps:
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
@@ -26,7 +27,7 @@ jobs:
     needs: build
     environment:
       name: publishing
-      url: https://pypi.org/project/tap-socketdev/${{ needs.build.outputs.package_version }}
+      url: https://pypi.org/p/${{ needs.build.outputs.package_name }}/${{ needs.build.outputs.package_version }}
     if: startsWith(github.ref, 'refs/tags/')
     steps:
       - uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
